# oxcable

./: .gitignore  .travis.yml  Cargo.toml  README.md  license-apache.txt  license-mit.txt  license.txt
scripts/: dynamics_analysis.py  filter_analysis.py  fit_envelope.py  oscillator_analysis.py
src/: adsr.rs  chain.rs  delay.rs  error.rs  graph.rs  init.rs  level_detector.rs  lib.rs  main.rs  oscillator.rs  oxcable.rs  tick.rs  tremolo.rs  types.rs  voice_array.rs  wrappers.rs
src/components/: channel.rs  io_array.rs  io_elements.rs  manager.rs  mod.rs  voice_array.rs
src/core/: channel.rs  complex.rs  fft.rs  init.rs  mod.rs  ringbuffer.rs  types.rs  util.rs
src/core/components/: channel.rs  io_array.rs  io_elements.rs  messages.rs  mod.rs  voice_array.rs
src/dynamics/: compressor.rs  level_detector.rs  limiter.rs  mod.rs  noise_gate.rs
src/filters/: first_order.rs  mod.rs  second_order.rs
src/instruments/: mod.rs  subtractive_synth.rs  voice_array.rs
src/io/: audio.rs  microphone.rs  midi.rs  mod.rs  speaker.rs  wav.rs
src/mixers/: adder.rs  gain.rs  mod.rs  multiplexer.rs  multiplier.rs
src/reverb/: mod.rs  moorer_reverb.rs  rooms.rs
src/testing/: mock_audio_device.rs  mod.rs
src/utils/: complex.rs  fft.rs  helpers.rs  mod.rs  ringbuffer.rs  tick.rs  windows.rs
src/wrappers/: buffered.rs  buffered_output.rs  messaged.rs  mod.rs
