[package]
name = "oxcable"
version = "0.4.0"
authors = ["Michael Nye <thenyeguy@gmail.com>"]
license = "MIT"
homepage = "https://github.com/thenyeguy/oxcable"
repository = "https://github.com/thenyeguy/oxcable"
documentation = "http://thenyeguy.github.io/oxcable/doc/oxcable/index.html"
description = "A signal processing framework for making music with Rust."
exclude= [ "wav/*" ]

[lib]
name = "oxcable"

[dependencies]
byteorder = "*"
portmidi = "*"
num = { version = "*", default-features = false }
portaudio = "*"
rand = "*"
