[package]
name = "oxcable"
version = "0.4.1"
authors = ["Michael Nye <thenyeguy@gmail.com>"]
license = "MIT"
homepage = "https://github.com/thenyeguy/oxcable"
repository = "https://github.com/thenyeguy/oxcable"
documentation = "http://thenyeguy.github.io/oxcable/doc/oxcable/index.html"
description = "A signal processing framework for making music with Rust."
exclude= [ "wav/*" ]

[lib]
name = "oxcable"

[dependencies]
byteorder = "*"
# TODO: return this to `"*"` after pull request lands
portmidi = { git = "https://github.com/thenyeguy/portmidi-rs" }
num = { version = "*", default-features = false }
portaudio = "*"
rand = "*"
